@@ -2,6 +2,9 @@ package io.hops.hopsworks.common.jobs.spark;
 
 import io.hops.hopsworks.common.jobs.jobhistory.JobType;
 import io.hops.hopsworks.common.jobs.yarn.LocalResourceDTO;
+import io.hops.hopsworks.common.jobs.yarn.ServiceProperties;
+import io.hops.hopsworks.common.jobs.yarn.YarnRunner;
+import io.hops.hopsworks.common.util.Settings;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -14,13 +17,11 @@ import java.util.Map;
 import java.util.Properties;
 import org.apache.hadoop.yarn.api.records.LocalResourceType;
 import org.apache.hadoop.yarn.api.records.LocalResourceVisibility;
-import io.hops.hopsworks.common.jobs.yarn.ServiceProperties;
-import io.hops.hopsworks.common.jobs.yarn.YarnRunner;
-import io.hops.hopsworks.common.util.Settings;
 
 /**
  * Builder class for a Spark YarnRunner. Implements the common logic needed
  * for any Spark job to be started and builds a YarnRunner instance.
+ *
  */
 public class SparkYarnRunnerBuilder {
 
@@ -45,7 +46,6 @@ public class SparkYarnRunnerBuilder {
   private final Map<String, String> sysProps = new HashMap<>();
   private String classPath;
   private String hadoopDir;
-  private String sparkDir;
   private ServiceProperties serviceProps;
 
   private JobType jobType;
@@ -84,12 +84,13 @@ public class SparkYarnRunnerBuilder {
           throws IOException {
 
     String hdfsSparkJarPath = Settings.getHdfsSparkJarPath(sparkUser);
+    String log4jPath = Settings.getSparkLog4JPath(sparkUser);
+    String metricsPath = Settings.getSparkMetricsPath(sparkUser);
     //Create a builder
     YarnRunner.Builder builder = new YarnRunner.Builder(Settings.SPARK_AM_MAIN);
     builder.setJobType(jobType);
 
     this.hadoopDir = hadoopDir;
-    this.sparkDir = sparkDir;
 
     String stagingPath = File.separator + "Projects" + File.separator + project
             + File.separator
@@ -98,7 +99,17 @@ public class SparkYarnRunnerBuilder {
     builder.localResourcesBasePath(stagingPath);
 
     builder.addLocalResource(new LocalResourceDTO(
-            "__spark_libs__", hdfsSparkJarPath,
+            Settings.LOCALIZED_LIB_DIR, hdfsSparkJarPath,
+            LocalResourceVisibility.PRIVATE.toString(),
+            LocalResourceType.ARCHIVE.toString(), null), false);
+    //Add log4j
+    builder.addLocalResource(new LocalResourceDTO(
+            Settings.SPARK_LOG4J_PROPERTIES, log4jPath,
+            LocalResourceVisibility.PRIVATE.toString(),
+            LocalResourceType.ARCHIVE.toString(), null), false);
+    //Add metrics
+    builder.addLocalResource(new LocalResourceDTO(
+            Settings.SPARK_METRICS_PROPERTIES, metricsPath,
             LocalResourceVisibility.PRIVATE.toString(),
             LocalResourceType.ARCHIVE.toString(), null), false);
 
@@ -126,8 +137,11 @@ public class SparkYarnRunnerBuilder {
 
     }
     builder.addToAppMasterEnvironment(YarnRunner.KEY_CLASSPATH,
-            "$PWD/__spark_conf__:__spark_conf__:__spark_libs__/*"
-            + ":" + Settings.SPARK_LOCRSC_APP_JAR
+            "$PWD/" + Settings.LOCALIZED_CONF_DIR + File.pathSeparator
+            + Settings.LOCALIZED_CONF_DIR
+            + File.pathSeparator + Settings.LOCALIZED_LIB_DIR + "/*"
+            + File.pathSeparator + Settings.SPARK_LOCRSC_APP_JAR
+            + File.pathSeparator + Settings.SPARK_LOG4J_PROPERTIES
     );
     //Set Spark specific environment variables
     builder.addToAppMasterEnvironment("SPARK_YARN_MODE", "true");
@@ -138,10 +152,9 @@ public class SparkYarnRunnerBuilder {
     }
 
     if (extraClassPathFiles.toString().length() > 0) {
-      addSystemProperty("spark.executor.extraClassPath", extraClassPathFiles.
-              toString().substring(
-                      0, extraClassPathFiles.length() - 1));
-
+      addSystemProperty(Settings.SPARK_EXECUTOR_EXTRACLASSPATH,
+              extraClassPathFiles.toString().substring(0, extraClassPathFiles.
+                      length() - 1));
     }
 
     //If DynamicExecutors are not enabled, set the user defined number 
@@ -180,15 +193,30 @@ public class SparkYarnRunnerBuilder {
     addSystemProperty(Settings.SPARK_EXECUTOR_MEMORY_ENV, executorMemory);
     addSystemProperty(Settings.SPARK_EXECUTOR_CORES_ENV, Integer.toString(
             executorCores));
-    addSystemProperty("spark.yarn.stagingDir", stagingPath);
+    addSystemProperty(Settings.SPARK_DRIVER_STAGINGDIR_ENV, stagingPath);
+    //Add log4j property
+    addSystemProperty(Settings.SPARK_LOG4J_CONFIG,
+            Settings.SPARK_LOG4J_PROPERTIES);
+    //Comma-separated list of attributes sent to Logstash
+    addSystemProperty(Settings.LOGSTASH_JOB_INFO,
+            project.toLowerCase() + "," + jobName + ","
+            + YarnRunner.APPID_PLACEHOLDER);
+    addSystemProperty(Settings.SPARK_JAVA_LIBRARY_PROP, this.hadoopDir
+            + "/lib/native/");
+    //addSystemProperty(Settings.SPARK_METRICS_ENV, Settings.SPARK_METRICS_PROPERTIES);
+
     //Set executor extraJavaOptions to make parameters available to executors
     StringBuilder extraJavaOptions = new StringBuilder();
-    extraJavaOptions.append("'-Dspark.executor.extraJavaOptions="
-            + "-Dlog4j.configuration=" + this.sparkDir
-            + "/conf/executor-log4j.properties "
-            + "-XX:+PrintReferenceGC -verbose:gc -XX:+PrintGCDetails "
-            + "-XX:+PrintGCTimeStamps -XX:+PrintAdaptiveSizePolicy "
-            + "-Djava.library.path=" + this.hadoopDir + "/lib/native/");
+    extraJavaOptions.append("'-Dspark.executor.extraJavaOptions=").
+            append("-D").append(Settings.SPARK_LOG4J_CONFIG).append("=").
+            append(Settings.SPARK_LOG4J_PROPERTIES).append(" ").
+            append("-D").append(Settings.LOGSTASH_JOB_INFO).append("=").
+            append(project.toLowerCase()).append(",").append(jobName).
+            append(",").append(YarnRunner.APPID_PLACEHOLDER).append(" ").
+            append("-XX:+PrintReferenceGC -verbose:gc -XX:+PrintGCDetails -XX:+"
+                    + "PrintGCTimeStamps -XX:+PrintAdaptiveSizePolicy ").
+            append("-D").append(Settings.SPARK_JAVA_LIBRARY_PROP).append("=").
+            append(this.hadoopDir).append("/lib/native/");
     if (serviceProps != null) {
       //Handle Kafka properties
       if (serviceProps.getKafka() != null) {
@@ -217,23 +245,17 @@ public class SparkYarnRunnerBuilder {
         extraJavaOptions.append(" -D" + Settings.KAFKA_SESSIONID_ENV_VAR + "=").
                 append(serviceProps.getKafka().getSessionId()).
                 append(" -D" + Settings.KAFKA_BROKERADDR_ENV_VAR + "=").
-                append(serviceProps.
-                        getKafka().getBrokerAddresses()).
+                append(serviceProps.getKafka().getBrokerAddresses()).
                 append(" -D" + Settings.KEYSTORE_PASSWORD_ENV_VAR + "=").
-                append(serviceProps.
-                        getKeystorePwd()).
+                append(serviceProps.getKeystorePwd()).
                 append(" -D" + Settings.TRUSTSTORE_PASSWORD_ENV_VAR + "=").
-                append(serviceProps.
-                        getTruststorePwd()).
+                append(serviceProps.getTruststorePwd()).
                 append(" -D" + Settings.KAFKA_JOB_TOPICS_ENV_VAR + "=").
-                append(serviceProps.
-                        getKafka().getTopics()).
+                append(serviceProps.getKafka().getTopics()).
                 append(" -D" + Settings.KAFKA_REST_ENDPOINT_ENV_VAR + "=").
-                append(serviceProps.
-                        getKafka().getRestEndpoint()).
+                append(serviceProps.getKafka().getRestEndpoint()).
                 append(" -D" + Settings.KAFKA_PROJECTID_ENV_VAR + "=").append(
-                serviceProps.
-                getProjectId());
+                serviceProps.getProjectId());
       }
       extraJavaOptions.append("'");
       builder.addJavaOption(extraJavaOptions.toString());
@@ -264,7 +286,14 @@ public class SparkYarnRunnerBuilder {
       }
     }
     for (String s : sysProps.keySet()) {
-      String option = escapeForShell("-D" + s + "=" + sysProps.get(s));
+      //Exclude "hopsworks.yarn.appid" property because we do not want to 
+      //escape it now
+      String option;
+      if (s.equals(Settings.LOGSTASH_JOB_INFO)) {
+        option = "-D" + s + "=" + sysProps.get(s);
+      } else {
+        option = escapeForShell("-D" + s + "=" + sysProps.get(s));
+      }
       builder.addJavaOption(option);
     }
 
@@ -272,7 +301,7 @@ public class SparkYarnRunnerBuilder {
     for (String s : jobArgs) {
       amargs.append(" --arg ").append(s);
     }
-    //amargs.append(" --properties-file __spark_conf__/spark-defaults.conf");
+
     builder.amArgs(amargs.toString());
 
     //Set up Yarn properties
